--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "mongodb": "^3.6.4"
   },
   "devDependencies": {
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "nodemon": "^2.0.7"
   },
   "scripts": {
