--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "start": "node index.js",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
